Fix: Toolbar should not wrap content
Update the Toolbar widget to sit alongside content widgets instead of
wrapping them, which allows the current scroll position to be maintained
when navigating away from the screen and then returning.

Remove the Toolbar's content `div` and associated classes; place the
title, actions, and button directly beneath the root node; and remove
the toolbar node wrapper and associated classes. Also, disable setting
the position to `Position.bottom` when the `fixed` property is falsy, as
this functionality is better served by a footer component.

--- a/src/toolbar/styles/toolbar.m.css
+++ b/src/toolbar/styles/toolbar.m.css
@@ -14,7 +14,7 @@
 }
 
 .rootFixed {
-	height: 100%;
+	display: flex;
 	left: 0;
 	overflow: hidden;
 	position: absolute;
@@ -23,37 +23,18 @@
 	z-index: var(--zindex-fixed);
 }
 
-.toolbarFixed {
-	display: flex;
-	position: relative;
-}
-
-.stickyFixed .toolbarFixed {
-	flex-grow: 0;
-	flex-shrink: 0;
-}
-
-.onBottomFixed .toolbarFixed {
-	order: 1;
+.onBottomFixed {
+	bottom: 0;
+	top: auto;
 }
 
 .stickyFixed {
-	display: flex;
-	flex-direction: column;
+	position: fixed;
 }
 
 .titleFixed {
 	flex-grow: 0;
 	flex-shrink: 0;
-}
-
-.stickyFixed .contentFixed {
-	flex: 1;
-	overflow-y: auto;
-}
-
-.onBottomFixed .contentFixed {
-	order: 0;
 }
 
 .onTopFixed {}
